--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@hookform/resolvers": "^3.9.0",
     "@mui/icons-material": "^5.16.6",
     "@mui/lab": "5.0.0-alpha.170",
     "@mui/material": "^5.16.6",
@@ -39,11 +40,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-flippy": "^1.1.0",
+    "react-hook-form": "^7.52.2",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
     "sass": "^1.66.1",
     "stylis": "^4.3.2",
-    "stylis-plugin-rtl": "^2.1.1"
+    "stylis-plugin-rtl": "^2.1.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.4.1",
