--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "sass": "^1.66.1",
     "stylis": "^4.3.2",
     "stylis-plugin-rtl": "^2.1.1",
+    "swiper": "^11.1.9",
     "yup": "^1.4.0"
   },
   "devDependencies": {
