--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/react-dom": "18.2.7",
     "axios": "^1.7.2",
     "eslint-config-next": "13.4.19",
+    "jwt-decode": "^4.0.0",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
