--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "axios": "^1.7.2",
     "eslint-config-next": "13.4.19",
     "jwt-decode": "^4.0.0",
+    "moment-jalaali": "^0.10.1",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -60,6 +61,7 @@
     "@storybook/react": "^7.4.1",
     "@storybook/testing-library": "^0.2.0",
     "@testing-library/react": "^14.0.0",
+    "@types/moment-jalaali": "^0.7.9",
     "@types/stylis": "^4.2.3",
     "@typescript-eslint/eslint-plugin": "^6.6.0",
     "@typescript-eslint/parser": "^6.6.0",
