--- a/package.json
+++ b/package.json
@@ -78,10 +78,10 @@
     "typescript": "5.1.6"
   },
   "engines": {
-    "pnpm": ">= 9.0.0",
-    "node": ">=18.0.0 <19.0.0"
+    "pnpm": "9.0.4",
+    "node": "20.12.2"
   },
   "volta": {
-    "node": "18.17.1"
+    "node": "20.12.2"
   }
 }
